--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "chalk": "^5.2.0",
     "jest": "^29.4.1"
   },
   "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Entregables](#6-entregables)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Checklist](#9-checklist)\r * [10. Achicando el problema](#10-achicando-el-problema)",
@@ -19,7 +20,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
+    
   },
   "repository": {
     "type": "git",
@@ -30,5 +32,9 @@
   "bugs": {
     "url": "https://github.com/Maresvainilla/md-links/issues"
   },
-  "homepage": "https://github.com/Maresvainilla/md-links#readme"
+  "homepage": "https://github.com/Maresvainilla/md-links#readme",
+  
+  "bin": {
+    "mareslib": "./cli.js"
+    }
 }
